objects/ssot__CoverageBenefit__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__VerificationDate__c</fullName>
        <label>Verification Date</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Verification Date</masterLabel>
            <refAttrDeveloperName>VerificationDate</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726055485_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CoverageBenefit_MemberId_map_Account_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>CoverageBenefit_MemberId_map_Account_rel</relationshipLabel>
        <relationshipName>rel_1716726055485_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726059344_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CoverageBenefit_MemberPlanId_map_Mem_rel</label>
        <referenceTo>ssot__MemberPlan__dlm</referenceTo>
        <relationshipLabel>CoverageBenefit_MemberPlanId_map_Mem_rel</relationshipLabel>
        <relationshipName>rel_1716726059344_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1723779545974_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CoverageBenefit_StatusCodeId_map_Cod_rel</label>
        <referenceTo>ssot__CodeSet__dlm</referenceTo>
        <relationshipLabel>CoverageBenefit_StatusCodeId_map_Cod_rel</relationshipLabel>
        <relationshipName>rel_1723779545974_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <mktDataModelAttributes>
        <creationType>Standard</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <isEnabled>false</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <masterLabel>Coverage Benefit</masterLabel>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Unassigned</objectCategory>
        <referenceEntityGroup>Care Member Plan</referenceEntityGroup>
        <referenceEntityName>CoverageBenefit</referenceEntityName>
        <referenceEntitySubjectArea>Care Member Plan</referenceEntitySubjectArea>
    </mktDataModelAttributes>
</CustomObject>